# app/Http/Controllers/Api/V1/OuterApiController.php
@@ -8,6 +8,7 @@ use App\Http\Requests\Activity\ActivityGetRequest;
 use App\Http\Requests\OuterApi\CancelOrderRequest;
 use App\Http\Requests\OuterApi\GetServiceDataRequest;
 use App\Http\Requests\OuterApi\SetOrderStatusRequest;
+use App\Http\Requests\OuterApi\UpdateOrderRequest;
 use App\Models\Activity;
 use App\Models\Order;
 use App\Models\OrderHistory;
@@ -32,6 +33,68 @@ class OuterApiController extends Controller
         return ['success' => true];
     }
 
+
+    /**
+     * @OA\Patch (
+     *     path="/outer-api/updateOrder",
+     *     operationId="updateOrder",
+     *     tags={"Order"},
+     *     summary="Изменить время приема/доставки заказа",
+     *     security={
+     *       {"Bearer Token": {}},
+     *     },
+     *
+     *     @OA\RequestBody(
+     *         @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(
+     *                  @OA\Property(property="external_number", type="string", description="Внешний номер заказа"),
+     *                  @OA\Property(property="receiving_date", type="string", description="Время приема в формате (d-m-Y H:i)"),
+     *                  @OA\Property(property="issue_date", type="string", description="Время выдачи в формате (d-m-Y H:i)"),
+     *                  example={"external_number": "04073d28-5ffd-3715-b7fa-77736767bf29", "receiving_date": "09-11-2021 15:21", "issue_date": "09-11-2021 16:00"}
+     *              ),
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response="200",
+     *         description="Ok",
+     *     ),
+     * )
+     *
+     * Изменить статус заказа
+     *
+     * @return JsonResponse
+     */
+    public function updateOrder(UpdateOrderRequest $request)
+    {
+        $validatedData = $request->validated();
+        $external_number = $validatedData['external_number'];
+        try {
+            $order = Order::where([
+                'parthner_id' => $request->user()->id,
+                'external_number' => $external_number
+            ])->firstOrFail();
+            //@TODO Добавить policy
+//            if ($request->user()->cannot('updateStatus', $order, Order::class)) {
+//                return $this->sendError('Доступ закрыт', Response::HTTP_FORBIDDEN);
+//            }
+        } catch (ModelNotFoundException $e) {
+            return $this->sendError('Заказ не найден.', Response::HTTP_NOT_FOUND);
+        }
+
+        try {
+            DB::transaction(function () use ($order, $validatedData) {
+                $order->receiving_date = $validatedData['receiving_date'];
+                $order->issue_date = $validatedData['issue_date'];
+                $order->save();
+            });
+        } catch (\Exception $e) {
+            return $this->sendError('Не удалось изменить заказ', Response::HTTP_INTERNAL_SERVER_ERROR, $e->getMessage());
+        }
+
+        return $this->send(Response::HTTP_OK, 'Заказ обновлен');
+    }
+
     /**
      * @OA\Patch (
      *     path="/outer-api/setStatus",
@@ -47,6 +110,7 @@ class OuterApiController extends Controller
      *              @OA\Schema(
      *                  @OA\Property(property="external_number", type="string", description="Внешний номер заказа"),
      *                  @OA\Property(property="order_status_id", type="integer", description="Новый статус заказа ( 1 - Создан, 2 - Курьер назначен, 3 - Забрали, 4 - Приняли, 5 - В работе, 6 - Упаковали, 7 - Выдали, 8 - Курьер выдает, 9 - Доставили, 10 - Оплатили, 11 - Отмена)"),
+     *                  example={"external_number": "04073d28-5ffd-3715-b7fa-77736767bf29", "order_status_id": 2}
      *              ),
      *         )
      *     ),
@@ -57,7 +121,7 @@ class OuterApiController extends Controller
      *     ),
      * )
      *
-     * Отменить заказ
+     * Изменить статус заказа
      *
      * @return JsonResponse
      */
@@ -117,6 +181,7 @@ class OuterApiController extends Controller
      *         @OA\MediaType(mediaType="application/json",
      *              @OA\Schema(
      *                  @OA\Property(property="external_number", type="string", description="Внешний номер заказа"),
+     *                  example={"external_number": "04073d28-5ffd-3715-b7fa-77736767bf29"}
      *              )
      *         )
      *     ),
