# routes/api.php
@@ -102,8 +102,9 @@ Route::group(['middleware' => ['auth:users']], function () {
 
 Route::group(['middleware' => ['auth:parthners']], function () {
     Route::prefix('outer-api')->group(function () {
-        Route::get('/getServiceData', [OuterApiController::class, 'getServiceData']);
+//        Route::get('/getServiceData', [OuterApiController::class, 'getServiceData']);
         Route::post('/createOrder', [OuterApiController::class, 'createOrder']);
+        Route::patch('/updateOrder', [OuterApiController::class, 'updateOrder']);
         Route::patch('/setStatus', [OuterApiController::class, 'setStatus']);
         Route::patch('/cancelOrder', [OuterApiController::class, 'cancelOrder']);
     });
